IVYPORTAL-16974 fix lables cut off LE (#742)

--- a/AxonIvyPortal/portal/webContent/resources/css/module.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/module.css
@@ -1215,7 +1215,6 @@ span.case-details-document-add-link, span.task-details-document-add-link {
 .compact-processes-container .process-start-list-item-name,
 .compact-default-processes-container .process-start-list-item-name {
   padding-left: 0 !important;
-  width: calc(100% - 75px) !important;
 }
 
 .process-start-list-item-action {
@@ -1254,9 +1253,8 @@ span.case-details-document-add-link, span.task-details-document-add-link {
 }
 
 .process-item-action-container {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  position: absolute;
   vertical-align: middle;
   height: 100%;
   right: 18px;
@@ -1358,7 +1356,7 @@ span.case-details-document-add-link, span.task-details-document-add-link {
 .compact-processes-container .process-start-list-item, .compact-default-processes-container .process-start-list-item {
   margin: auto;
   margin-bottom: 12px;
-  padding: 0;
+  padding-right: 15px;
 }
 
 .add-external-link-icon {
